# cms

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: 7389b26f-a00b-443c-a33d-b5bc9d26a955  Dockerfile  Dockerfile-api  Dockerfile-mill  Dockerfile-shuttle  README.md  d3e1078a-7ace-26bd-7eb3-5c8dd3a4c3f0  periodic.conf  periodic.conf.dev  prestart.sh  pyproject.toml  requirements.txt  setup.py  supervisor-every-minute.py  supervisor-listener.py  tasks.py
backend/maint-scripts/: compare_catalogs.py  compute_illustration_hashes.py  create_collection_titles.py  create_initial_book_history.py  create_initial_collection_history.py  create_initial_title_history.py  normalize_illustrations.py  populate_cms_database.py  update_recipes_and_title_flavours.py  update_title_flavours_from_books.py  update_titles_from_latest_books.py
backend/src/: alembic.ini  main.py
backend/src/backend/: __init__.py  constants.py  entrypoint.py  event_handlers.py  main.py  models.py  schemas.py  utils.py
backend/src/backend/collections/: __init__.py  kiwix_public.py
backend/src/backend/digesters/: __init__.py  raw.py
backend/src/backend/exporters/: __init__.py  kiwix_public_exporter.py
backend/src/backend/formatters/: __init__.py  kiwixlibraryxml.py
backend/src/backend/routes/: ZimcheckDashboard.py  books.py  digesters.py  exports.py  languages.py  tags.py  test.py  titles.py  zimcheck_dashboard.py
backend/src/cms_backend/: __init__.py  alembic.ini  context.py  main.py  roles.py
backend/src/cms_backend/api/: context.py  main.py  token.py
backend/src/cms_backend/api/routes/: account.py  auth.py  books.py  collection.py  config.py  dependencies.py  events.py  fields.py  library.py  models.py  staging.py  titles.py  user.py  utils.py  warehouse.py  zimfarm_notifications.py  zimfarm_recipes.py
backend/src/cms_backend/db/: __init__.py  account.py  book.py  book_location.py  books.py  collection.py  event.py  flavour.py  library.py  models.py  refresh_token.py  rules.py  staging.py  title.py  user.py  warehouse.py  warehouse_path.py  zimfarm_notification.py  zimfarm_recipe.py
backend/src/cms_backend/migrations/: env.py
backend/src/cms_backend/migrations/versions/: 0c0f13d5733b_create_zimfarm_recipe_and_title_flavour_.py  13c0e15bcd02_add_zimcheck_s3_deleted_to_book.py  148e2b179499_store_illustraion_hashes.py  1625ae981cfb_make_warehouse_name_unique.py  222139c5c331_set_up_database_models.py  23a35bf09895_inital.py  275477bbacde_add_increase_decrease_thresholds_for_.py  2c699e7d3dd4_add-log-entries.py  323cd3ac0fdf_create_book_title_foreign_key.py  40b58eace3fb_use_alter.py  5376af219730_initial_schema.py  56433a685cf7_add_filename_to_book.py  6376af219731_refactor_book_status_to_flags.py  6c6181d36517_add_support_for_flavors.py  6c6181d36517_add_support_for_flavours.py  73581b2c4d05_revamp_database.py  7739aed017eb_add-titletags.py  7c36d46dd0dd_add_display_name_field_for_accounts.py  8b190eda9c41_update-size-to-big-int.py  8cd022c48b90_create_collection_history.py  8f0ee48f7dce_rename_user_to_account.py  9254dad0c9f0_remove-obsolete-field.py  92d03596d8f7_title_name_is_unique.py  932875a3e13a_create_title_history.py  97efb1be3356_replace_zimcheck_results_with_zimcheck_.py  9b1940316bba_convert_book_int_colums_to_bigint.py  9dc25bcae26f_add_flavours_to_title.py  (+27 more)
backend/src/cms_backend/mill/: context.py  main.py  mark_staging_books_for_deletion.py  process_retention_rules.py  process_title_modifications.py  process_zimfarm_notifications.py  stream_processor.py
backend/src/cms_backend/processors/: book.py  title.py  zimfarm_notification.py
backend/src/cms_backend/redis/: __init__.py  consumer.py  publisher.py
backend/src/cms_backend/routes/: books.py  healthcheck.py  models.py  titles.py  warehouse_paths.py  zimfarm_notification.py  zimfarm_notifications.py
backend/src/cms_backend/schemas/: __init__.py  models.py  orms.py
backend/src/cms_backend/shuttle/: context.py  delete_files.py  delete_zimcheck_s3_results.py  main.py  move_files.py
backend/src/cms_backend/utils/: __init__.py  database.py  datetime.py  filename.py  requests.py  task_config.py  zim.py
backend/src/demo/: data.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 23a35bf09895_inital.py  2c699e7d3dd4_add-log-entries.py  4c75e2618d00_update-size-to-big-integer.py  7739aed017eb_add-titletags.py  7739aed017eb_unnamed.py  8b190eda9c41_update-size-to-big-int.py  9254dad0c9f0_remove-obsolete-field.py
backend/src/scripts/: __init__.py  book_cleaner.py
backend/tests/: conftest.py  test_books_endpoint.py  test_collections.py  test_digesters.py  test_event_handlers.py  test_exporter.py  test_formatters.py  test_languages_endpoint.py  test_models.py  test_remove_obsolete_books.py  test_root_endpoint.py  test_schemas.py  test_stub.py  test_stub_books.py  test_stub_titles.py  test_tags_endpoint.py  test_titles_endpoint.py  test_utils.py  test_zimcheck_dashboard.py  utils.py
backend/tests/api/: test_token_decoder.py
backend/tests/api/routes/: conftest.py  test_account.py  test_books.py  test_collections.py  test_events.py  test_healthcheck.py  test_library.py  test_titles.py  test_user.py  test_warehouses.py  test_zimfarm_notification.py  test_zimfarm_recipes.py
backend/tests/db/: test_account.py  test_book.py  test_books.py  test_collections.py  test_event.py  test_refresh_token.py  test_title.py  test_user.py  test_zimfarm_notification.py  test_zimfarm_recipe.py
backend/tests/mill/: conftest.py  test_process_retention_rules.py  test_process_title_modifications.py
backend/tests/mill/processors/: conftest.py  test_book.py  test_title.py  test_zimfarm_notification.py
backend/tests/processors/: test_book.py  test_book_location_integration.py  test_title.py  test_zimfarm_notification.py
backend/tests/routes/: conftest.py  test_books.py  test_titles.py  test_zimfarm_notification.py
backend/tests/shuttle/: __init__.py  conftest.py  test_delete_files.py  test_delete_zimcheck_s3_results.py  test_move_files.py
backend/tests/utils/: test_filename.py  test_zim.py
dev/: README.md  (+4 more)
(+199 files in other folders)
