[build-system]
requires = ["wheel", "setuptools", "toml"]
build-backend = "setuptools.build_meta"

[dependencies]
runtime = [
    "fastapi[all] >=0.70.0,<1.0",
    "databases >=0.5.3,<1.0",
    "psycopg2-binary >=2.9.1,<3.0.0",
    "asyncpg >=0.24,<0.26",
    "ormar >=0.11.0,<0.12.0",
    "alembic >=1.7.4,<2.0",
    "aiosqlite >=0.17.0,<1.0",
    "zimscraperlib >=1.4.1,<2.0",
    "fastapi-pagination >=0.9.1,<1.0"
]
test = [
    "pytest >=6.2.5,<7.0.0",
    "pytest-asyncio >=0.17.0,<1.0",
    "pytest-cov >=2.12.0,<4.0.0",
    "coverage >=6.0.2,<7.0",
    "httpx >=0.22.0,<0.23"
]
dev = [
    "black >=21.9b0,<22",
    "isort >=5.9.3,<6.0",
    "pre-commit >=2.15.0,<3.0",
    "flake8 >=<4.0.1,<5.0",
    "uvicorn[standard] >=0.12.0,<0.16.0",
    "alembic-autogen-check >=1.1.1,<1.2"
]

[tool.isort]
profile = "black"
known_third_party = ["fastapi", "pydantic", "starlette"]

[tool.black]
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.pytest.ini_options]
testpaths = ["tests", "../tests"]
asyncio_mode = "auto"
